--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ updated: May 2018
      
       <p>
       <a target="_blank" class="btn btn-xs btn-social btn-fb" href="https://www.facebook.com/sharer/sharer.php?u={{ page.url | prepend: site.url }}" title="Share on Facebook"><i class="fab fa-facebook"></i> Like</a>
-      <a target="_blank" class="btn btn-xs btn-social btn-tw" href="https://twitter.com/intent/tweet/?text={{ site.title }}&url={{ page.url | prepend: site.url }}&via={{ site.twitter }}" title="Share on Twitter"><i class="fab fa-twitter"></i> Tweet</a>
+      <a target="_blank" class="btn btn-xs btn-social btn-tw" href="https://twitter.com/intent/tweet?text={{ site.title }}&url={{ page.url | prepend: site.url }}&via={{ site.twitter }}" title="Share on Twitter"><i class="fab fa-twitter"></i> Tweet</a>
       <a target="_blank" class="btn btn-xs btn-social btn-li" href="https://www.linkedin.com/shareArticle?mini=true&url={{ page.url | prepend: site.url }}" title="Share on LinkedIn"><i class="fab fa-linkedin"></i> Share</a>
       </p>
     
