--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ updated: June 2018
   <div class="row">
     <div class="col-md-12">
     
-      <h1><a href="/"><img src="images/logo.png" class="logo" alt="DeepIndex"></a></h1>
+      <h1><a href="/"><img src="images/splash.png" class="logo" alt="DeepIndex"></a></h1>
     
     </div>
   </div>
