--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: splash
-updated: July 2018
+updated: September 2018
 ---
 
 <div class="container">
@@ -130,7 +130,7 @@ updated: July 2018
   
   <div class="row">
     <div class="col-md-12 splash">
-      <p class="text-muted"><small>Contact: <a href="mailto:hello@deepindex.org">hello@deepindex.org</a> or <a href="https://twitter.com/deepindex">@deepindex</a><br />
+      <p class="text-muted"><small>Contact: <a href="mailto:hello@deepindex.org">hello@deepindex.org</a><br />
       Curated by <a href="https://twitter.com/clry2">@clry2</a> and last updated {{ page.updated }}</small></p>
     </div>
   </div>
