--- a/pages/history.html
+++ b/pages/history.html
@@ -1,6 +1,6 @@
 ---
 layout: splash
-permalink: history
+permalink: /history/
 title: History
 description: "A brief history of artificial intelligence."
 ---
