--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@ layout: splash
 
   <div class="row">
     <div class="col-md-12">
+      <p class="alert alert-info text-center" role="alert">We're looking for volunteers to help curate this page. Interested? Email <a href="mailto:hello@deepindex.org" class="alert-link">hello@deepindex.org</a></p>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-12">
     
       <h1><a href="/"><img src="images/splash.png" class="logo" alt="DeepIndex" /></a></h1>
     
