--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: splash
 
   <div class="row">
     <div class="col-md-12">
-      <p class="alert alert-info text-center" role="alert">We're looking for volunteers to help curate this page. Interested? Email <a href="mailto:hello@deepindex.org" class="alert-link">hello@deepindex.org</a></p>
+      <p class="alert alert-info text-center" role="alert">You can now propose new examples for inclusion on this website! <a href="https://github.com/deepindex/deepindex.github.io" class="alert-link">Find out more »</a></p>
     </div>
   </div>
 
