--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: splash
 
   <div class="row">
     <div class="col-md-12">
-      <p class="alert alert-info text-center" role="alert">Help improve DeepIndex by suggesting new examples for us to include! <a href="https://github.com/deepindex/deepindex.github.io" class="alert-link">Find out more »</a></p>
+      <p class="alert alert-info text-center" role="alert">Help improve DeepIndex by suggesting new examples for us to include! <a href="https://github.com/deepindex/deepindex.github.io/blob/master/README.md" class="alert-link">Find out more »</a></p>
     </div>
   </div>
 
